# firebench

./: .gitattributes  .gitignore  .pylintrc  .readthedocs.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  data_request.md  documentation_request.md  feature_request.md  help_wanted.md  question.md  workflow_request.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  data.md  documentation.md  feature.md  workflow.md
.github/actions/: check_namespace_file_consistency.py  create_metadata_docstring.py  generate_api_docs.py  run_pylint.py  update_changelog_in_docs.py
.github/workflows/: black.yml  build_docs.yml  ci.yml  pylint.yml  security.yml
data/ROS_model_validation/: data_Anderson_2015.json  data_wildfires.json
data/benchmarks/fire_submodels/: ROS_validation_using_Anderson_2015_dataset.tar.zst
data/fuel_models/: Anderson.csv  Anderson13.json  ScottandBurgan40.json  WUDAPT_urban.json  data_Anderson13.csv  data_ScottandBurgan40.csv  data_WUDAPT_urban.csv  meta_Anderson13.json
data/ros_model_validation/Anderson_2015/: Table_8.json  Table_A1.json  data_Table_8.csv  data_Table_A1.csv
data/test/: data_dummy_fuel_model.csv  dummy_fuel_model.json  file_test_1.h5
docs/: Gemfile  _config.yml  changelog.md  conf.py  content.md  contribute.md  dependencies.md  developers.md  index.md  license.md  namespace.md  requirements.txt  standard_format.md
docs/api/: index.rst  metrics.rst  ros_models.rst  stats.rst  tools.rst  wind_interpolation.rst
docs/assets/js/: mathjax.js
docs/benchmarks/: index.md
docs/benchmarks/California/: 01_Caldor.md
docs/benchmarks_information/: index.md
docs/dataset_experiments/: Anderson_2015_dataset.md  WPI_large_scale_experiments_dataset.md  index.md
docs/fire_models_info/: index.md
docs/fire_models_info/21_fuel_models/: 02_Anderson.md  03_SB40.md  50_WUDAPT.md  index.md
docs/fire_models_info/22_rate_of_spread_models/: 02_Rothermel.md  03_Balbi2022.md  04_Santoni2011.md  05_McArthur.md  06_Cheney.md  07_VanWagner.md  50_Hamada1.md  51_Hamada2.md  index.md
docs/fire_models_info/23_wind_red_factor/: index.md
docs/metrics/: index.md  kpis.md  metrics.md  normalization.md  score.md
docs/tutorials/: change_fuel_model_ros.md  index.md  new_ros_model.md  standard_file_probes.md
docs/worflows_0D_models/: 01_rate_of_spread_workflows.md  index.md
docs/workflows/: index.md
docs/workflows/0D_models/: 01_rate_of_spread_workflows.md  index.md
docs/workflows/sensitivity/: index.md  ros_sensitivity.md
docs/workflows_0D_models/: index.md
docs/workflows_0D_models/efficiency/: efficiency_Rothermel_SFIRE.md  index.md
docs/workflows_0D_models/sensitivity/: Balbi_2022_SB40.md  Hamada_2_wudapt.md  Rothermel_SFIRE_A13.md  Rothermel_SFIRE_SB40.md  index.md
docs_tmp/docs/: Gemfile  developers.md  license.md  namespace.md
docs_tmp/docs/_includes/: mathjax.html
docs_tmp/docs/dataset_experiments/: Anderson_2015_dataset.md
docs_tmp/docs/fire_models_info/: index.md
docs_tmp/docs/tutorials/: change_fuel_model_ros.md  index.md  new_ros_model.md
src/firebench/: __init__.py  units.py
src/firebench/metrics/: __init__.py  kpi_normalization.py  table.py  tools.py
src/firebench/resources/: wx_sensor_height_providers.json  (+1 more)
tests/func/: test_data_quality_check_workflow.py  test_read_data_files.py  test_tools_local_database.py
tests/regression/: test_reg_wind_interpolation.py  test_sensors.py  test_stats_internal_fuel_models.py  test_surface_ros_models.py  test_surface_ros_models_urban.py
tests/unit/: test_fuel_model_utils.py  test_logging.py  test_metrics_confusion_matrix.py  test_metrics_misc.py  test_metrics_perimeters_shape.py  test_metrics_stats_1D.py  test_sensors_validity.py  test_standard_io_file_tools.py  test_stats_utils_hist.py  test_std_tools.py  test_surface_ros.py  test_tools.py  test_tools_local_db.py  test_tools_raster_to_perimeters.py  test_tools_utils.py  test_unit_data_quality_check.py  test_wind_interp.py
workflow/rate_of_spread_models_analysis/: 03_01_C_sensitivity_env_var.py  03_01_calc_sensitivity_env_var.py  03_01_post_sensitivity_env_var.py  03_01_sensitivity_env_var.py
(+120 files in other folders)
