[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "firebench"
version = "0.7.0a"
authors = [
    {name = "Aurélien Costes", email = "aurelien.costes31@gmail.com"},
]
maintainers = [
    {name = "Aurélien Costes", email = "aurelien.costes31@gmail.com"},
]
description = "FireBench is a Python library designed for the systematic benchmarking and inter-comparison of fire models."
dependencies = [
    "numpy < 3.0",
    "pint < 1.0",
    "scipy < 2.0",
    "SALib < 2.0",
    "h5py < 4.0",
    "geopandas < 2.0",
    "matplotlib > 3.8",
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    # Pick your license as you wish (see also "license" above)
    "License :: OSI Approved :: Apache Software License",
]
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "bandit",
    "pylint",
    "black",
    "shapely",
]
[tool.hatch.envs.default]
features = ["dev"]